--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,8 +8,10 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
     crossorigin="anonymous" />
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
+  
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
     crossorigin="anonymous" />
+ 
   <link rel="stylesheet" href="/css/{{ style }}.css" />
 
   <title>Home</title>
@@ -17,7 +19,7 @@
 
 <body>
 <nav class="navbar navbar-expand-lg  bg-danger navbar-dark">
-  <a class="navbar-brand" href="/home">
+  <a class="navbar-brand" href="/home" style="font-family: 'Dancing Script', cursive; letter-spacing: 0.1em;font-size:2em">
     Deliciously
   </a>
   <button
@@ -64,7 +66,7 @@
   </div>
 </nav>
   <div class="">
-    <img src="/assets/heroNew9.png" class="d-block w-100 " />
+    <img src="/assets/hero.jpg" class="d-block w-100 " />
 
   </div>
 
