--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
         crossorigin="anonymous">
-      <link rel="stylesheet" href="/css/{{ style }}.css" /> 
+  <link rel="stylesheet" href="/css/{{ style }}.css" /> 
 <title>Welcome to the login</title>
 </head>
 
@@ -34,8 +34,8 @@
                             <input type="submit" class="btn btn-lg btn-danger m-3" id="myBtn" value="submit" />
                            
                             <br>
-                            Dont have an account yet? <a href="/signup" class="mt-5">SignUp</a> here.
-                            <a href="/reset" class="mt-5">Reset Password</a>
+                            Don't have an account yet? <a href="/signup" class="mt-5">SignUp</a> here.
+                           
                         </div>
                 </form>
 
