--- a/public/css/myCollection.css
+++ b/public/css/myCollection.css
@@ -20,18 +20,18 @@
   background: #ccc;
   margin: 1.5rem 0;
 }
-
+/* 
 .bg-white {
   background-color: white;
   color: #333;
   border: #ccc 1px solid;
-}
+} */
 
 .dark-overlay {
   height: 100%;
   width: 100%;
   position: absolute;
-  top: 0;
+  top: 50;
   left: 0;
   background-color: rgba(0, 0, 0, 0.8);
 }
@@ -65,7 +65,7 @@ body {
   font-weight: 700;
   color: white;
   padding: 1px 1px;
-  margin: 56px 0;
+  margin: 120px 0;
   border-radius: 4px;
 }
 #addBtn:hover {
@@ -100,4 +100,49 @@ body {
 .hvr-underline-from-left:focus:before,
 .hvr-underline-from-left:active:before {
   right: 0;
+}
+.card-img-top {
+  height: 320px;
+}
+.card {
+  height: 550px;
+  min-width: 30px;
+}
+#description {
+  max-height: 70px;
+  overflow: auto;
+}
+.hvr-curl-top-left {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+}
+.hvr-curl-top-left:before {
+  pointer-events: none;
+  position: absolute;
+  content: "";
+  height: 0;
+  width: 0;
+  top: 0;
+  left: 0;
+  background: white;
+  /* IE9 */
+  background: linear-gradient(135deg, white 45%, #aaa 50%, #ccc 56%, white 80%);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff', endColorstr='#000000');
+  /*For IE7-8-9*/
+  z-index: 1000;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: width, height;
+  transition-property: width, height;
+}
+.hvr-curl-top-left:hover:before,
+.hvr-curl-top-left:focus:before,
+.hvr-curl-top-left:active:before {
+  width: 25px;
+  height: 25px;
 }
