--- a/views/addRecipe.handlebars
+++ b/views/addRecipe.handlebars
@@ -29,7 +29,7 @@
 
   <body>
     <nav class="navbar navbar-expand-lg  bg-danger navbar-dark">
-  <a class="navbar-brand" href="/home">
+   <a class="navbar-brand" href="/home" style="font-family: 'Dancing Script', cursive; letter-spacing: 0.1em;font-size:2em">
     Deliciously
   </a>
   <button
