--- a/views/allRecipes.handlebars
+++ b/views/allRecipes.handlebars
@@ -20,6 +20,7 @@
       integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
       crossorigin="anonymous"
     />
+
     <link rel="stylesheet" href="/css/{{ style }}.css" />
 
     <title>All Recipes</title>
@@ -27,7 +28,7 @@
 
   <body>
 <nav class="navbar navbar-expand-lg  bg-danger navbar-dark">
-  <a class="navbar-brand" href="/home">
+   <a class="navbar-brand" href="/home" style="font-family: 'Dancing Script', cursive; letter-spacing: 0.1em;font-size:2em">
     Deliciously
   </a>
   <button
@@ -75,23 +76,23 @@
 </nav>
    <section class="page-top-section ">
       <img src="./assets/page-top-bg.jpg" alt="" />
-      <div class="container">
-        <h2 class="card-img-overlay" style="color:white">
+      <div class="container mt-5">
+        <h2 class="card-img-overlay " style="color:white">
           All Recipes
         </h2>
       </div> 
     </section>
-    <section class="container-fluid">
-      <div class="row myx-4">
+    <section class="container-fluid mt-5">
+      {{!-- <div class="row m-3">
         <div class="col-12 mt-4">
-          {{!--
+         
           <h1 class="large text-danger my-2">Recipes</h1>
-          --}}
+       
         </div>
-      </div>
-     <div class="row">
+      </div> --}}
+     <div class="row m-2">
       {{#each recipes}}
-      <div class="col-md-3 col-sm-6">
+      <div class="col-md-4 col-sm-6">
         <div class="card text-left mb-4" id="card-deck">
           <img class="card-img-top round-image" src="{{this.image}}" alt="" />
 
